# Licenta

./: .gitignore  CMakeLists.txt  README.md  links.txt
Application/: CMakeLists.txt
Application/include/Controller/: CameraManagementWindowController.h  CustomComboBoxDialogController.h  MainWindowController.h  ParkingSetupWindowController.h
Application/include/Model/: ActionManagement.h  Utils.h  VideoCamera.h
Application/include/Model/Database/: Database.h
Application/include/Model/Database/BusinessLogic/: Camera.h  CameraKey.h  CameraType.h  ParkingSession.h  ParkingSpace.h  Session.h
Application/include/Model/Database/DataAccess/: Camera.h  CameraKey.h  CameraType.h  ParkingSession.h  ParkingSpace.h  Session.h
Application/include/Model/Database/Entities/: Camera.h  CameraKey.h  CameraType.h  ParkingSession.h  ParkingSpace.h  Session.h
Application/include/Model/Detection/: ObjectDetector.h
Application/include/Model/Detection/LicensePlateDetection/: DetectionType.h  Postprocess.h  Preprocess.h  SmoothingAlgorithmEnum.h  Workflow.h
Application/include/Model/Utils/: ImageConversion.h  JsonFile.h  JsonFileUtils.h  QtKeysEnum.h
Application/include/Model/Utils/Interfaces/: DefaultCameraTypeAction.h  ICameraTypeCustomAction.h  IVideoListener.h  InterfaceVideoListener.h
Application/include/View/: cameramanagementwindow.h  mainwindow.h  parkingsetupwindow.h
Application/include/View/CustomComponents/: CameraComboBoxDialog.h  ClickableLabel.h  CustomComboBoxDialog.h
Application/source/: main.cpp
Application/source/Controller/: CameraManagementWindowController.cpp  CustomComboBoxDialogController.cpp  MainWindowController.cpp  ParkingSetupWindowController.cpp
Application/source/Model/: ActionManagement.cpp  Utils.cpp  VideoCamera.cpp
Application/source/Model/Database/: Database.cpp
Application/source/Model/Database/BusinessLogic/: Camera.cpp  CameraKey.cpp  CameraType.cpp  ParkingSession.cpp  ParkingSpace.cpp  Session.cpp
Application/source/Model/Database/DataAccess/: Camera.cpp  CameraKey.cpp  CameraType.cpp  ParkingSession.cpp  ParkingSpace.cpp  Session.cpp
Application/source/Model/Database/Entities/: Camera.cpp  CameraKey.cpp  CameraType.cpp  ParkingSession.cpp  ParkingSpace.cpp  Session.cpp
Application/source/Model/Detection/: ObjectDetector.cpp
Application/source/Model/Detection/LicensePlateDetection/: Postprocess.cpp  Preprocess.cpp  Workflow.cpp
Application/source/Model/Utils/: ImageConversion.cpp  JsonFile.cpp  JsonFileUtils.cpp
Application/source/Model/Utils/Interfaces/: DefaultCameraTypeAction.cpp  InterfaceVideoListener.cpp
Application/source/View/: cameramanagementwindow.cpp  cameramanagementwindow.ui  mainwindow.cpp  mainwindow.ui  parkingsetupwindow.cpp  parkingsetupwindow.ui
Application/source/View/CustomComponents/: CameraComboBoxDialog.cpp  ClickableLabel.cpp  CustomComboBoxDialog.cpp
Documentation/: PrezentareLicenta.pptx  main.tex
Resources/: CMakeLists.txt  (+4 more)
(+82 files in other folders)
